Refactor JUnit tests